force-app/main/default/objects/pmdm__Service__c/fields/pmdm__AttendanceRate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__AttendanceRate__c</fullName>
    <formula>IF(NOT(ISBLANK( pmdm__NumAbsentServiceDeliveries__c )) || NOT(ISBLANK( pmdm__NumPresentServiceDeliveries__c )),
pmdm__NumPresentServiceDeliveries__c / (pmdm__NumPresentServiceDeliveries__c + pmdm__NumAbsentServiceDeliveries__c),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>