force-app/main/default/objects/pmdm__Service__c/fields/pmdm__Description__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>