force-app/main/default/objects/pmdm__Service__c/fields/pmdm__NumAbsentServiceDeliveries__c.field-meta.xml
<CustomField>
    <fullName>pmdm__NumAbsentServiceDeliveries__c</fullName>
    <label>Number of Absent Service Deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>