force-app/main/default/objects/pmdm__Service__c/fields/pmdm__Program__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>pmdm__Program__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>